# libsuspend

./: CMakeLists.txt  autosleep.c  common.h  earlysuspend.c  legacy.c  libsuspend.c  libsuspend.h  mocksuspend.c  sysfs.c  sysfs.h
